@@ -1,3 +1,6 @@
+4777.	[cleanup]	Removed a redundant call to configure_view_acl().
+			[RT #46369]
+
 4776.	[bug]		Improve portability of ht_test. [RT #46333]
 
 4775.	[bug]		Address Coverity warnings in ht_test.c and mem_test.c
